# Kosovo-Weather

./: .gitignore  README.md
backend/: .env.example  requirements.txt
backend/app/: main.py
core/: go.mod
core/weather/: service.go
frontend/: .env.example  README.md  index.html  install-deps.sh  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: LoadingScreen.tsx  Navbar.tsx  WeatherCard.tsx  WeatherChart.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/pages/: CityWeather.tsx  Dashboard.tsx  Settings.tsx
frontend/src/styles/: index.css
frontend/src/utils/: translations.ts
